Last touchups before changing the copy. Updated to properly reference accent color, fixed whitespace on logo, and changed colors

--- a/src/components/icon-link.scss
+++ b/src/components/icon-link.scss
@@ -4,7 +4,7 @@ a.icon-link{
     border: none;
 
     &:hover {
-        color: $primary-color;
+        color: $accent-color;
         background-color: $background-color;
     }
 
