--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,10 +8,11 @@ $blue: 	#1b60a9;
 // color role assignment
 $primary-color: $black;
 $primary-complement: $white;
-$secondary-color: $black;
-$accent-color: $black;
-$background-color: $white;
 
+$accent-color: $red;
+$accent-complement: $white; 
+
+$background-color: $white;
 $text-color: $black;
 $logo-color: $black;
 $icon-link-color: $black;
